tests/fixtures/invalid/max_bool_str.py
# Cannot call max() with Bool, Str
x = max(True, "hello")
